--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-.next
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-#next-env.d.ts
-
-
-
 # 排除所有dist文件夹
 dist/
 **/dist/
@@ -48,3 +6,7 @@ dist/
 # 排除所有dist文件夹
 node_modules/
 **/node_modules/
+
+
+# 排除nuxtjs相关文件
+.nuxt
