--- a/nuxtjs1/package.json
+++ b/nuxtjs1/package.json
@@ -10,9 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@element-plus/nuxt": "^1.1.4",
+    "element-plus": "^2.11.1",
     "nuxt": "^3.18.1",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   }
- 
 }
