--- a/nuxtjs1/package.json
+++ b/nuxtjs1/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@element-plus/nuxt": "^1.1.4",
+    "@pinia/nuxt": "^0.11.2",
     "element-plus": "^2.11.1",
     "nuxt": "^3.18.1",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   }
