--- a/nuxtjs3/package.json
+++ b/nuxtjs3/package.json
@@ -18,21 +18,21 @@
   "dependencies": {
     "@element-plus/nuxt": "^1.1.4",
     "@pinia/nuxt": "^0.11.2",
+    "bcryptjs": "^2.4.3",
     "element-plus": "^2.11.1",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.18.1",
     "pinia": "^3.0.3",
-    "prisma": "^6.11.1",
     "pinia-plugin-persistedstate": "^4.5.0",
+    "prisma": "^6.11.1",
     "vue": "^3.5.20",
-    "vue-router": "^4.5.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@prisma/client": "^6.11.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
+    "sass-embedded": "^1.92.1",
     "tsx": "^4.7.0"
   }
-
 }
